Fix long common title overflow

--- a/src/containers/Common/containers/CommonDetailContainer/index.scss
+++ b/src/containers/Common/containers/CommonDetailContainer/index.scss
@@ -35,6 +35,7 @@
             font-weight: 600;
             color: #001a36;
             font-family: NotoSerifSC-Black;
+            word-break: break-word;
           }
           .tagline {
             font-size: 16px;
